--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-dotnet@v1
     - name: Restore
       working-directory: ./src
-      run: dotnet restore --configfile ./src/nuget.config
+      run: dotnet restore --configfile ./nuget.config
     - name: Build
       working-directory: ./src
       run: dotnet build -c Release --no-restore
