--- a/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
+++ b/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="README.md" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPiServer.CMS.Core" Version="12.4.0" />
     <PackageReference Include="EPiServer.Personalization.Content.UI" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
