--- a/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
+++ b/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
@@ -9,11 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="README.md" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="README.md" />
+	<None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
   <ItemGroup>
