--- a/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
+++ b/src/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria/TechnicalDogsbody.Optimizely.CloudflareGeoLocationCriteria.csproj
@@ -6,10 +6,12 @@
     <Nullable>enable</Nullable>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
 	<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+	<Title>TechnicalDogsbody's Optimizely Cloudflare GeoLocation Criteria</Title>
+	<Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-	<None Include="README.md" Pack="true" PackagePath="\"/>
+	<None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <ItemGroup>
